--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
+          onclick="addBackground();"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
